# CarND-MPC-Project

./: .gitignore  CMakeLists.txt  README.md  Rubic.md
src/: MPC.cpp  MPC.h  config.h  kinematic_model.cpp  kinematic_model.h  main.cpp
